Added header view

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -32,10 +32,18 @@
   );
 
   height: 100px;
-  padding: 12px var(--edge-padding);
+  padding: 12px var(--section-horizontal-padding);
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+}
+
+.navbar__container img {
+  cursor: pointer;
 }
 
 .navbar__link-container {
