--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -31,8 +31,8 @@
     rgba(220, 250, 255, 1) 100%
   );
 
-  height: 100px;
-  padding: 12px var(--section-horizontal-padding);
+  height: 60px;
+  padding: 1rem var(--section-horizontal-padding);
   display: flex;
   align-items: center;
   justify-content: space-between;
