--- a/src/containers/workingWithUs/workingWithUs.css
+++ b/src/containers/workingWithUs/workingWithUs.css
@@ -1,42 +1,40 @@
 .workingWithUs__container {
-  background-color: black;
   margin-top: 1rem;
   height: 400px;
-  background-color: aqua;
   background-image: url("../../assets/workbg.png");
   background-size: cover;
   background-position: center;
   position: relative;
 }
 
-.dark-overlay {
+.workingWithUs__dark-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* Adjust the opacity as desired */
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
 }
 
-.content {
+.workingWithUs__content {
   position: absolute;
   z-index: 2;
   top: 100px;
   left: var(--section-horizontal-padding);
 }
 
-.content p {
+.workingWithUs__content p {
   font-size: 18px;
 }
 
-.content h1,
-.content p {
+.workingWithUs__content h1,
+.workingWithUs__content p {
   color: white;
   text-shadow: -1px -1px 0 var(--color-primary), 1px -1px 0 var(--color-primary),
     -1px 1px 0 var(--color-primary), 1px 1px 0 var(--color-primary);
 }
 
-.content Button {
+.workingWithUs__content Button {
   margin-top: 2rem;
 }
