--- a/src/components/value/value.css
+++ b/src/components/value/value.css
@@ -8,6 +8,10 @@
   padding: 0.5rem 0.5rem;
 }
 
+.value__container-title:hover {
+  background-color: var(--color-primary-dark);
+}
+
 .value__left-content {
   display: flex;
   align-items: center;
