--- a/src/containers/quoteContainer/quoteContainer.css
+++ b/src/containers/quoteContainer/quoteContainer.css
@@ -1,8 +1,13 @@
 .quoteContainer__content {
-  margin: 2rem var(--section-horizontal-padding);
+  margin: 4rem var(--section-horizontal-padding);
   display: flex;
   justify-content: center;
 }
 
 .quoteContainer__mapContacts-container {
+  margin-right: 1rem;
+}
+
+.quoteContainer__form-container {
+  margin-left: 1rem;
 }
