--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -54,8 +54,7 @@
 
 .footer__social-media {
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .footer__social-media img {
@@ -69,7 +68,7 @@
   flex-direction: column;
   height: 200px;
   width: 100%;
-  margin-top: 0.3rem;
+  margin-top: 1rem;
   background-color: var(--color-primary-dark);
   border-top-left-radius: 100px;
   border-bottom-right-radius: 100px;
@@ -96,8 +95,12 @@
 .footer__second-section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin-top: 1rem;
+  justify-content: space-between;
+}
+
+.footer__copyright-text {
+  margin-right: 3rem;
 }
 
 .footer__second-section p {
@@ -114,4 +117,7 @@
   flex-wrap: wrap;
   margin-left: 3rem;
   color: white;
+}
+
+@media (max-width: 1300px) {
 }
