--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,5 +1,4 @@
 .button__container button {
-  background-color: var(--color-primary);
   color: white;
   padding: 1rem 2rem;
   border: none;
@@ -7,8 +6,13 @@
   cursor: pointer;
   outline: none;
   font-weight: 600;
+  background-color: var(--color-primary);
+  opacity: 1;
+  transition: background-color 0.5s ease, opacity 0.5s ease;
 }
 
 .button__container button:hover {
-  box-shadow: 0 10px 24px #303030;
+  box-shadow: 0 5px 15px #303030;
+  background-color: var(--color-primary-dark);
+  opacity: 0.8;
 }
