--- a/src/containers/quoteForm/quoteForm.css
+++ b/src/containers/quoteForm/quoteForm.css
@@ -19,6 +19,7 @@
   border-radius: 10px;
   border: 1px var(--color-primary) solid;
   background-color: #dcfaff;
+  margin-bottom: 2rem;
 }
 
 .quoteForm__text-area textarea:focus {
@@ -31,21 +32,4 @@
   color: var(--color-error);
   font-size: 13px;
   margin-top: 1px;
-}
-
-.quoteForm__container button {
-  margin-top: 2rem;
-  padding: 0.5rem 1rem;
-  color: #fff;
-  background: var(--color-primary);
-  font-size: 18px;
-  line-height: 25px;
-  border-radius: 5px;
-  border: 0;
-  outline: none;
-  cursor: pointer;
-}
-
-.quoteForm__container button:hover {
-  background: var(--color-primary-dark);
 }
