--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -16,3 +16,19 @@
   background-color: var(--color-primary-dark);
   opacity: 0.8;
 }
+
+@media (max-width: 550px) {
+  .button__container button{
+    font-weight: 500;
+    font-size: 14px;
+    padding: 0.8rem 1.5rem;
+  }
+}
+
+@media (max-width: 410px) {
+  .button__container button{
+    font-weight: 500;
+    font-size: 13px;
+    padding: 0.8rem 1.5rem;
+  }
+}
