--- a/src/components/person/person.css
+++ b/src/components/person/person.css
@@ -37,3 +37,9 @@
   margin-left: 1rem;
   cursor: pointer;
 }
+
+@media (max-width: 410px) {
+  .person__container p {
+    font-size: 14px;
+  }
+}
