--- a/src/components/serviceCard/serviceCard.css
+++ b/src/components/serviceCard/serviceCard.css
@@ -56,6 +56,7 @@
   .serviceCard__container p {
     font-weight: 400;
     font-size: 15px;
+    line-height: 1.4;
   }
 
   .serviceCard__title h3 {
