--- a/src/components/entry/entry.css
+++ b/src/components/entry/entry.css
@@ -31,3 +31,13 @@
   font-size: 13px;
   margin-top: 1px;
 }
+
+@media (max-width: 700px) {
+  .entry__container input {
+    width: 250px;
+  }
+
+  .entry__container{
+    margin-bottom: 0.6rem;
+  }
+}
