--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -10,3 +10,17 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 1000px) {
+  .map__container {
+    height: 320px;
+    width: 320px;
+  }
+}
+
+@media (max-width: 700px) {
+  .map__container {
+    height: 250px;
+    width: 250px;
+  }
+}
