--- a/src/containers/contacts/contacts.css
+++ b/src/containers/contacts/contacts.css
@@ -2,6 +2,7 @@
   background-color: var(--color-primary);
   padding: 1rem;
   margin: 1rem 0;
+  width: 500px;
   border-radius: 12px;
 }
 
@@ -17,4 +18,16 @@
 .contacts__container div img {
   height: 16px;
   margin-right: 1rem;
+}
+
+@media (max-width: 1000px) {
+  .contacts__container{
+    width: 320px;
+  }
+}
+
+@media (max-width: 700px) {
+  .contacts__container{
+    width: 250px;
+  }
 }
