--- a/src/containers/quoteContainer/quoteContainer.css
+++ b/src/containers/quoteContainer/quoteContainer.css
@@ -1,13 +1,41 @@
 .quoteContainer__content {
-  margin: 4rem var(--section-horizontal-padding);
+  margin: 4rem 0;
   display: flex;
   justify-content: center;
 }
 
 .quoteContainer__mapContacts-container {
-  margin-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .quoteContainer__form-container {
-  margin-left: 1rem;
+}
+
+.quoteContainer__vertical-divider{
+  width: 100px;
+}
+
+@media (max-width: 1110px) {
+  .quoteContainer__vertical-divider{
+    width: 30px;
+  }
+}
+
+@media (max-width: 590px) {
+  .quoteContainer__content{
+    flex-direction: column;
+  }
+
+  .quoteContainer__form-container{
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 410px) {
+  .quoteContainer__content p{
+    font-weight: 400;
+    font-size: 15px;
+  }
 }
