--- a/src/containers/quoteForm/quoteForm.css
+++ b/src/containers/quoteForm/quoteForm.css
@@ -1,5 +1,4 @@
 .quoteForm__container {
-  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,4 +31,12 @@
   color: var(--color-error);
   font-size: 13px;
   margin-top: 1px;
+}
+
+@media (max-width: 700px) {
+  .quoteForm__text-area textarea {
+    width: 250px;
+    min-height: 90px;
+    margin-bottom: 1rem;
+  }
 }
