--- a/src/containers/workingWithUs/workingWithUs.css
+++ b/src/containers/workingWithUs/workingWithUs.css
@@ -1,7 +1,7 @@
 .workingWithUs__container {
   margin-top: 1rem;
   height: 400px;
-  background-image: url("../../assets/workbg.png");
+  background-image: url("../../assets/banner5.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
