--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -74,8 +74,8 @@
   background-color: var(--color-primary-dark);
   border-top-left-radius: 100px;
   border-bottom-right-radius: 100px;
-  padding-left:  3rem;
-  padding-right:  1.5rem;
+  padding-left: 3rem;
+  padding-right: 1.5rem;
   align-items: flex-start;
   justify-content: center;
 }
@@ -123,6 +123,17 @@
   margin-bottom: 0.5rem;
 }
 
+.footer__QR-code__container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 99;
+}
+
+.footer__QR-code__container img {
+  height: 250px;
+}
+
 @media (max-width: 1414px) {
   .serviceCard__container {
     margin-right: 1rem;
@@ -134,20 +145,20 @@
   }
 }
 
-@media (max-width: 1050px){
+@media (max-width: 1050px) {
   .footer__first-section {
-  flex-direction: column;
+    flex-direction: column;
   }
 
   .footer__about-company {
     width: 100%;
   }
 
-  .footer__quicklinks ul{
+  .footer__quicklinks ul {
     display: flex;
   }
 
-  .footer__quicklinks ul li{
+  .footer__quicklinks ul li {
     margin-left: 1.2rem;
     padding-right: 3rem;
   }
@@ -166,29 +177,27 @@
   }
 }
 
-@media (max-width: 560px){
-  .footer__quicklinks ul li{
+@media (max-width: 560px) {
+  .footer__quicklinks ul li {
     padding-right: 1rem;
   }
 }
 
-@media(max-width: 440px){
-  .footer__quicklinks ul{
+@media (max-width: 440px) {
+  .footer__quicklinks ul {
     display: flex;
     flex-direction: column;
   }
 }
 
 @media (max-width: 410px) {
-
-  .footer__second-section p
-  .footer__second-section div p  {
+  .footer__second-section p .footer__second-section div p {
     font-weight: 400;
     font-size: 15px;
   }
 
-.footer__about-company h3,
-.footer__quicklinks h3 {
+  .footer__about-company h3,
+  .footer__quicklinks h3 {
     font-size: 15px;
     max-width: 75px;
   }
