--- a/src/containers/whatWeDo/whatWeDo.css
+++ b/src/containers/whatWeDo/whatWeDo.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 var(--section-horizontal-padding);
+  margin-bottom: 3rem;
 }
 
 .whatWeDo__left-container {
@@ -16,13 +17,22 @@
 .whatWeDo__side-image {
   margin: 1rem 2rem;
   flex: 1;
-  height: 530px;
+  height: 400px;
   overflow: hidden;
   border-radius: 12px;
 }
 
 .whatWeDo__content h3 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.whatWeDo__list-title {
+  margin-top: 0.5rem;
+  font-weight: 500;
+}
+
+.whatWeDo__values-list {
+  margin-left: 1rem;
 }
 
 .whatWeDo__content p {
@@ -42,12 +52,16 @@
   border-radius: 12px;
 }
 
+.whatWeDo__inner-list {
+  margin-left: 25px;
+}
+
 @media (max-width: 1290px) {
   .whatWeDo__container {
     flex-direction: column;
   }
-  .whatWeDo__side-image img{
-  width: 100%;
+  .whatWeDo__side-image img {
+    width: 100%;
   }
 }
 
@@ -56,14 +70,14 @@
     padding: 1rem 1rem;
   }
 
-  .whatWeDo__content p{
+  .whatWeDo__content p {
     font-weight: 400;
     font-size: 15px;
     line-height: 1.4;
   }
 
   .whatWeDo__values h3,
-  .whatWeDo__content h3  {
+  .whatWeDo__content h3 {
     font-size: 16px;
   }
 }
